Fix tutorial page overflowing and distribute data into favvorites

--- a/frontend/src/app/recording/recording.component.css
+++ b/frontend/src/app/recording/recording.component.css
@@ -38,7 +38,7 @@
   }
 
   .player #bottom {
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -46,5 +46,11 @@
   .player {
     position: relative;
     width: 100%;
-    overflow-y: scroll;
   }
+
+  pre{
+    white-space:normal;
+}
+code{
+  white-space: pre;
+}
